feat: Update Android build configuration to enable code obfuscation and resource shrinking

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,12 +49,11 @@ jobs:
         keystore-base64: ${{ secrets.ANDROID_RELEASE_KEY }}
         keystore-password: "${{ secrets.ANDROID_RELEASE_KEY_PASSWORD }}"
         # optionals
-        build-cmd: flutter build apk --release --flavor dev
+        build-cmd: flutter build apk --release --obfuscate --split-debug-info=build/debug-info
         working-directory: ./
 
     - name: Archive APK
       uses: actions/upload-artifact@v4
       with:
         name: release-apk
-        # Try running the build locally with the build command to be sure of this path
-        path: build/app/outputs/flutter-apk/app-dev-release.apk
+        path: build/app/outputs/flutter-apk/app-release.apk
