--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,15 @@ name: Build and Deploy
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*'
   workflow_dispatch:
 
 jobs:
   build-web:
     name: Build and Deploy Web
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v3
@@ -40,6 +43,7 @@ jobs:
   build-android:
     name: Build Android APK
     runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
     - uses: actions/checkout@v3
@@ -52,8 +56,25 @@ jobs:
         build-cmd: flutter build apk --release --obfuscate --split-debug-info=build/debug-info
         working-directory: ./
 
-    - name: Archive APK
-      uses: actions/upload-artifact@v4
+    - name: Get version from pubspec.yaml
+      id: version
+      run: |
+        VERSION=$(grep "^version:" pubspec.yaml | cut -d " " -f 2 | tr -d '\r')
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "Version: $VERSION"
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
       with:
-        name: release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
+        tag_name: v${{ steps.version.outputs.version }}
+        name: Release v${{ steps.version.outputs.version }}
+        body: |
+          **版本:** ${{ steps.version.outputs.version }}
+          **建置日期:** ${{ github.event.head_commit.timestamp }}
+          **Commit:** ${{ github.sha }}
+        files: |
+          build/app/outputs/flutter-apk/app-release.apk
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
