--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,14 @@
-name: Build and Deploy
+﻿name: Deploy Web to GitHub Pages
 
 on:
   push:
     branches: [ main ]
-    tags:
-      - 'v*'
   workflow_dispatch:
 
 jobs:
   build-web:
     name: Build and Deploy Web
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
     
     steps:
     - uses: actions/checkout@v3
@@ -51,69 +48,3 @@ jobs:
         user_name: 'github-ci[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         commit_message: 'Publish to gh-pages'
-
-  build-android:
-    name: Build Android APK
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-    
-    steps:
-    - uses: actions/checkout@v3
-    
-    - name: Setup Flutter
-      uses: subosito/flutter-action@v2
-      with:
-        channel: 'stable'
-        cache: true
-        cache-key: 'flutter-:os:-:channel:-:version:-:arch:-:hash:'
-    
-    - name: Cache pub dependencies
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.pub-cache
-          ${{ github.workspace }}/.dart_tool
-        key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pub-
-    
-    - name: Cache Gradle
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
-
-    - uses: cedvdb/action-flutter-build-android@v1
-      with:
-        keystore-base64: ${{ secrets.ANDROID_RELEASE_KEY }}
-        keystore-password: "${{ secrets.ANDROID_RELEASE_KEY_PASSWORD }}"
-        # optionals
-        build-cmd: flutter build apk --release --obfuscate --split-debug-info=build/debug-info
-        working-directory: ./
-
-    - name: Get version from pubspec.yaml
-      id: version
-      run: |
-        VERSION=$(grep "^version:" pubspec.yaml | cut -d " " -f 2 | tr -d '\r')
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "Version: $VERSION"
-
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
-      with:
-        tag_name: v${{ steps.version.outputs.version }}
-        name: Release v${{ steps.version.outputs.version }}
-        body: |
-          **版本:** ${{ steps.version.outputs.version }}
-          **建置日期:** ${{ github.event.head_commit.timestamp }}
-          **Commit:** ${{ github.sha }}
-        files: |
-          build/app/outputs/flutter-apk/app-release.apk
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
